--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,10 @@
 .input_field::placeholder {
   font-family: 'Radio Canada', sans-serif;
 }
-
+.custom-focus-color input:focus {
+  border-color: #80bdff; /* Change the border color to your desired focus color */
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); /* Optional: Add a box-shadow effect */
+}
 .overlay {
   position: fixed;
   width: 100%;
@@ -43,11 +46,18 @@
   color: black;
   letter-spacing: 1px;
   font-weight: bold;
-  font-family: 'Radio Canada', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 .font_class {
-  font-family: 'Radio Canada', sans-serif;
-  font-weight: bold;
+    font-family: 'Radio Canada', sans-serif;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 18px;
+    height: 86%;
+    text-align: center;
 }
 .search_btn:hover {
   background-color:#36846b ;
@@ -78,11 +88,9 @@
   margin-top: 16px;
 }
 .col_class1 {
-  background-color: aliceblue;
-  height: auto;
-  border-radius: 12px;
-  padding-left: 8px;
+  border-bottom: 1px solid #DADADC;
   position: relative;
+
 }
 .col_6_div {
   gap: 16px
@@ -141,4 +149,107 @@
 }
 .make_new_list_text {
   font-family: 'Bungee', sans-serif
+}
+.job_box {
+  border: 2px solid black;
+  padding: 16px;
+  height: calc(100vh - 380px);
+  overflow-y: scroll;
+  border-radius: 5px;
+}
+.cpy {
+  font-family: "Nunito Sans", sans-serif;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 4px;
+  margin-bottom: 0px;
+}
+
+.job_box_list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 84%;
+}
+.header_main {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+.btn_color {
+    background-color: rgb(111, 111, 111);
+    border-radius: 5px;
+    padding: 7px;
+    outline: none;
+    border: none;
+}
+.task-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.task {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+}
+
+.task-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.task-title {
+  font-weight: bold;
+}
+
+.task-status {
+  color: #007bff;
+}
+
+.task-description {
+  color: #333;
+}
+
+
+.statuses {
+    display: none;
+  }
+
+
+
+@media screen and (max-width:428px) {
+  .header_main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+  .job_text,.job_text_line_through {
+    font-size: 12px;
+  }
+  .fa-edit, .fa-undo, .fa-trash-alt, .fa-check-circle {
+    font-size: 12px;
+  }
+  .status_2 {
+    color: #ff5959;
+    font-weight: bold;
+    font-family: 12px;
+    font-family: "Nunito Sans", sans-serif;
+    margin: 0px !important; 
+}
+  
+.actions {
+  position: absolute;
+    right: 10px;
+    top: -2px;
+    gap: 6px
+}
+  .statuses {
+    display: none;
+  }
 }
