--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@
     
 }
 .make_new_list_text {
-  font-family: 'Bungee', sans-serif
+  font-family: 'Bungee', sans-serif;
 }
 .job_box {
   border: 2px solid black;
@@ -252,4 +252,11 @@
   .statuses {
     display: none;
   }
+  .make_new_list_text {
+  font-family: 'Bungee', sans-serif;
+  font-size: 12px;
+}
+.make_list_img {
+  display: none;
+}
 }
